Tried to make the Example in the WPF Example app and it still doesn't work...

--- a/RadContextMenuForRadGridView/RadContextMenuForRadGridView_WPF.csproj
+++ b/RadContextMenuForRadGridView/RadContextMenuForRadGridView_WPF.csproj
@@ -78,6 +78,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ExtendedContextMenu.cs" />
     <Compile Include="RadGridViewSampleData.cs" />
     <Page Include="Example.xaml">
       <SubType>Designer</SubType>
